Reworked column names - camel case

--- a/source-code/py-notebook/QLD-lists.ipynb
+++ b/source-code/py-notebook/QLD-lists.ipynb
@@ -107,7 +107,10 @@
     "Read in the Conservation list and join to get the code descriptions. Change the field names to `sourceStatus` and `status` as required by the ALA's conservation list processing."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -217,7 +220,10 @@
     "**Species without a status**"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -253,7 +259,10 @@
     "* replace kingdom/class values with scientific names"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -331,7 +340,10 @@
     "## Sensitive List"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -467,7 +479,10 @@
    "cell_type": "markdown",
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   }
  ],
