--- a/source-code/py-notebook/conventional-NSW.ipynb
+++ b/source-code/py-notebook/conventional-NSW.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "300760aa",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import urllib.request, json \n",
@@ -16,7 +20,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "f792cc2d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -51038,7 +51046,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "5c25d538",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -51049,7 +51061,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "d8349a31",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -51460,7 +51476,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "c18b86fc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "data.to_csv('testCon-NSW.csv', index= None)"
@@ -51470,7 +51490,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "0be3ebb7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"testCon-NSW.csv\")"
@@ -51480,7 +51504,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "fe8f8947",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -51891,7 +51919,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "cd494107",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df = df[df.stateConservation != 'Not Listed']"
@@ -51901,7 +51933,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "c23d1b0f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -52312,7 +52348,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "69493cdd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "conservation = df[(df['speciesID'] == df['taxonID'])]"
@@ -52322,7 +52362,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "84bf61b3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -52733,7 +52777,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "fe7ff7af",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "conservation = conservation[['taxonRank', 'kingdom' ,'class','order','family','genus','scientificName','specificEpithet','vernacularName','establishmentMeans','stateConservation','protectedInNSW','sensitivityClass','TSProfileID','countryConservation','dcterms_modified','speciesID','taxonID']]"
@@ -52743,7 +52791,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "e7bdbf37",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -53105,7 +53157,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "aaf6fa05",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -53128,7 +53184,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "4b40c2d9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "conservation = conservation.rename(columns={\"stateConservation\": \"sourceStatus\"})"
@@ -53138,7 +53198,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "704f5e26",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -53525,7 +53589,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "f2c41383",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "conservation.to_csv('conservation-NSW.csv', index= None)"
@@ -53535,7 +53603,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ea506be1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
