--- a/source-code/py-notebook/northernTerritoryConservationStatusList.ipynb
+++ b/source-code/py-notebook/northernTerritoryConservationStatusList.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "776f75ec",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#import essential libraries \n",
@@ -18,7 +22,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "871b5ff6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "data = pd.read_excel(\"/Users/cha801/Documents/UpdateLists/Excels/northernTerritoryConservationStatusList-Plants.xlsx\")"
@@ -28,7 +36,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "64f2960e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#rename the DwC terms\n",
@@ -45,7 +57,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "6dfe07ec",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -188,7 +204,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "6a518373",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "data['sourceStatus'] = data['status'].copy()"
@@ -198,7 +218,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "ea8c097e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "data['status'] = data['status'].str.split('(').str[0]"
@@ -208,7 +232,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "00b66b5c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "data['vernacularName'] = data['Scientific name'].str.split('\\n').str[1]"
@@ -218,7 +246,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "f109fbe8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "data['scientificName'] = data['Scientific name'].str.split('\\n').str[0]"
@@ -228,7 +260,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "269535c8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "data = data.drop(['Scientific name'], axis=1)"
@@ -238,7 +274,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "c9da2e29",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#data.to_csv('/northernTerritoryConservationStatusList-Plants.csv',index = False,encoding='utf-8-sig')"
@@ -248,7 +288,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "c52c67e3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "data1 = pd.read_csv(\"/northernTerritoryConservationStatusList-Animals.csv\")"
@@ -258,7 +302,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "99484c30",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -278,7 +326,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "bb031394",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "result = pd.concat([data, data1])"
@@ -288,7 +340,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "2437c822",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -306,7 +362,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "8aee5661",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -498,7 +558,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "249fe09d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "result.to_csv('/northernTerritoryConservationStatusList.csv',index = False,encoding='utf-8-sig')"
@@ -508,7 +572,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8e2a39b6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
