--- a/source-code/py-notebook/sensitive-NSW.ipynb
+++ b/source-code/py-notebook/sensitive-NSW.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "e4998905",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import urllib.request, json \n",
@@ -16,7 +20,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "3ca73f5d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -51038,7 +51046,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "f1e02791",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -51049,7 +51061,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "34caf55d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -51460,7 +51476,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "7ad5498d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "data.to_csv('testNSW.csv', index= None)"
@@ -51470,7 +51490,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "42b29997",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"testNSW.csv\")"
@@ -51480,7 +51504,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "bed4d65e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -51891,7 +51919,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "ad4f9719",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "dictn = {\"Category 3\": \"1km\",\n",
@@ -51904,7 +51936,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "94900b2e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "select = ['Category 3','Category 2','Category 1']"
@@ -51914,7 +51950,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "7fae7a7b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df['generalisation'] = df['sensitivityClass']"
@@ -51924,7 +51964,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "c88349d3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df['generalisation'] = df['generalisation'].replace(dictn)"
@@ -51934,7 +51978,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "e501d475",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "sensitive = df[(df['speciesID'] == df['taxonID']) & df['sensitivityClass'].isin(select)]"
@@ -51944,7 +51992,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "f479ccb8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -52355,7 +52407,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "9db514cf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "sensitive = sensitive[['taxonRank', 'kingdom' ,'class','order','family','genus','scientificName','specificEpithet','vernacularName','establishmentMeans','stateConservation','protectedInNSW','sensitivityClass','TSProfileID','countryConservation','dcterms_modified','speciesID','taxonID','generalisation']]"
@@ -52365,7 +52421,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "b19129a7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -52388,7 +52448,11 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "d046dc87",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "sensitive = sensitive.rename(columns={\"stateConservation\": \"sourceStatus\"})"
@@ -52398,7 +52462,11 @@
    "cell_type": "code",
    "execution_count": 33,
    "id": "3586f378",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -52797,7 +52865,11 @@
    "cell_type": "code",
    "execution_count": 34,
    "id": "5efdec00",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "sensitive.to_csv('sensitive-NSW.csv',index = False,encoding='utf-8-sig')"
@@ -52807,7 +52879,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0f34c7b7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
