--- a/source-code/py-notebook/SA-lists.ipynb
+++ b/source-code/py-notebook/SA-lists.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "#import essential libraries\n",
@@ -102,7 +102,10 @@
    "cell_type": "markdown",
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
