--- a/source-code/py-notebook/TAS-lists.ipynb
+++ b/source-code/py-notebook/TAS-lists.ipynb
@@ -2,31 +2,117 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "#import essential libraries\n",
+    "import pandas as pd"
+   ],
    "metadata": {
-    "collapsed": true
-   },
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# update the encoding on the final file\n",
+    "# fileurl = \"/Users/new330/IdeaProjects/authoritative-lists/current-lists/conservation-lists/TAS-conservation.csv\"\n",
+    "# tas = pd.read_csv(fileurl,encoding='cp1252')\n",
+    "# tas.to_csv(fileurl, encoding=\"UTF-8\",index=False)\n",
+    "# tas"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading SA Sensitive List\n"
+     ]
+    },
+    {
      "data": {
-      "text/plain": "                             scientificName  \\\n0                             Costora iena    \n1                    Hadronyche pulvinator    \n2                   Hypolimnus pedderensis    \n3                  Thylacinus cynocephalus    \n4    Gallirallus philippensis macquariensis   \n..                                      ...   \n678                    Erioderma sorediatum   \n679              Xanthoparmelia amphixantha   \n680              Xanthoparmelia molliuscula   \n681             Xanthoparmelia subloxodella   \n682                 Xanthoparmelia willisii   \n\n                              scientificNameAuthorship  \\\n0                                               Mosely   \n1                                              Hickman   \n2                                           (Jamieson)   \n3                                               Harris   \n4                                               Hutton   \n..                                                 ...   \n678                           D.J.Galloway & P.M.Jørg.   \n679                                  (Müll.Arg.) Hale    \n680                                        (Ach.) Hale   \n681  (Elix & Kantvilas) O.Blanco, A.Crespo, Elix, D...   \n682                 (Kurok. & Filson) Elix & J.Johnst.   \n\n                vernacularName        family          class sourceStatus  \\\n0     Caddis Fly (Great Lakes)   Trichoptera  Invertebrates            x   \n1    Cascade Funnel-web Spider       Araneae  Invertebrates            x   \n2        Lake Pedder Earthworm   Haplotaxida  Invertebrates            x   \n3                    Thylacine       Mammals    Vertebrates            x   \n4        Macquarie Island Rail         Birds    Vertebrates            x   \n..                         ...           ...            ...          ...   \n678                        NaN  Pannariaceae         Lichen            e   \n679                        NaN  Parmeliaceae         Lichen            e   \n680                        NaN  Parmeliaceae         Lichen            e   \n681                        NaN  Parmeliaceae         Lichen            e   \n682                        NaN  Parmeliaceae         Lichen            e   \n\n               status EPBCA_status sourceKingdom   kingdom  speciesGroup  \\\n0    Presumed Extinct          NaN         Fauna  Animalia  invertebrate   \n1    Presumed Extinct          NaN         Fauna  Animalia  invertebrate   \n2    Presumed Extinct           EX         Fauna  Animalia  invertebrate   \n3    Presumed Extinct           EX         Fauna  Animalia    vertebrate   \n4    Presumed Extinct           EX         Fauna  Animalia    vertebrate   \n..                ...          ...           ...       ...           ...   \n678        Endangered          NaN         Flora   Plantae  non-vascular   \n679        Endangered          NaN         Flora   Plantae  non-vascular   \n680        Endangered          NaN         Flora   Plantae  non-vascular   \n681        Endangered          NaN         Flora   Plantae  non-vascular   \n682        Endangered          NaN         Flora   Plantae  non-vascular   \n\n     Unnamed: 11 sourceOrigin           higherGeography  \n0            NaN          end          endemic Tasmania  \n1            NaN          end          endemic Tasmania  \n2            NaN          end          endemic Tasmania  \n3            NaN          end          endemic Tasmania  \n4            NaN          eMI  endemic Macquarie Island  \n..           ...          ...                       ...  \n678          NaN          NaN                       NaN  \n679          NaN          NaN                       NaN  \n680          NaN          NaN                       NaN  \n681          NaN          NaN                       NaN  \n682          NaN          NaN                       NaN  \n\n[683 rows x 14 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>scientificNameAuthorship</th>\n      <th>vernacularName</th>\n      <th>family</th>\n      <th>class</th>\n      <th>sourceStatus</th>\n      <th>status</th>\n      <th>EPBCA_status</th>\n      <th>sourceKingdom</th>\n      <th>kingdom</th>\n      <th>speciesGroup</th>\n      <th>Unnamed: 11</th>\n      <th>sourceOrigin</th>\n      <th>higherGeography</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Costora iena</td>\n      <td>Mosely</td>\n      <td>Caddis Fly (Great Lakes)</td>\n      <td>Trichoptera</td>\n      <td>Invertebrates</td>\n      <td>x</td>\n      <td>Presumed Extinct</td>\n      <td>NaN</td>\n      <td>Fauna</td>\n      <td>Animalia</td>\n      <td>invertebrate</td>\n      <td>NaN</td>\n      <td>end</td>\n      <td>endemic Tasmania</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Hadronyche pulvinator</td>\n      <td>Hickman</td>\n      <td>Cascade Funnel-web Spider</td>\n      <td>Araneae</td>\n      <td>Invertebrates</td>\n      <td>x</td>\n      <td>Presumed Extinct</td>\n      <td>NaN</td>\n      <td>Fauna</td>\n      <td>Animalia</td>\n      <td>invertebrate</td>\n      <td>NaN</td>\n      <td>end</td>\n      <td>endemic Tasmania</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Hypolimnus pedderensis</td>\n      <td>(Jamieson)</td>\n      <td>Lake Pedder Earthworm</td>\n      <td>Haplotaxida</td>\n      <td>Invertebrates</td>\n      <td>x</td>\n      <td>Presumed Extinct</td>\n      <td>EX</td>\n      <td>Fauna</td>\n      <td>Animalia</td>\n      <td>invertebrate</td>\n      <td>NaN</td>\n      <td>end</td>\n      <td>endemic Tasmania</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Thylacinus cynocephalus</td>\n      <td>Harris</td>\n      <td>Thylacine</td>\n      <td>Mammals</td>\n      <td>Vertebrates</td>\n      <td>x</td>\n      <td>Presumed Extinct</td>\n      <td>EX</td>\n      <td>Fauna</td>\n      <td>Animalia</td>\n      <td>vertebrate</td>\n      <td>NaN</td>\n      <td>end</td>\n      <td>endemic Tasmania</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Gallirallus philippensis macquariensis</td>\n      <td>Hutton</td>\n      <td>Macquarie Island Rail</td>\n      <td>Birds</td>\n      <td>Vertebrates</td>\n      <td>x</td>\n      <td>Presumed Extinct</td>\n      <td>EX</td>\n      <td>Fauna</td>\n      <td>Animalia</td>\n      <td>vertebrate</td>\n      <td>NaN</td>\n      <td>eMI</td>\n      <td>endemic Macquarie Island</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>678</th>\n      <td>Erioderma sorediatum</td>\n      <td>D.J.Galloway &amp; P.M.Jørg.</td>\n      <td>NaN</td>\n      <td>Pannariaceae</td>\n      <td>Lichen</td>\n      <td>e</td>\n      <td>Endangered</td>\n      <td>NaN</td>\n      <td>Flora</td>\n      <td>Plantae</td>\n      <td>non-vascular</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>679</th>\n      <td>Xanthoparmelia amphixantha</td>\n      <td>(Müll.Arg.) Hale</td>\n      <td>NaN</td>\n      <td>Parmeliaceae</td>\n      <td>Lichen</td>\n      <td>e</td>\n      <td>Endangered</td>\n      <td>NaN</td>\n      <td>Flora</td>\n      <td>Plantae</td>\n      <td>non-vascular</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>680</th>\n      <td>Xanthoparmelia molliuscula</td>\n      <td>(Ach.) Hale</td>\n      <td>NaN</td>\n      <td>Parmeliaceae</td>\n      <td>Lichen</td>\n      <td>e</td>\n      <td>Endangered</td>\n      <td>NaN</td>\n      <td>Flora</td>\n      <td>Plantae</td>\n      <td>non-vascular</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>681</th>\n      <td>Xanthoparmelia subloxodella</td>\n      <td>(Elix &amp; Kantvilas) O.Blanco, A.Crespo, Elix, D...</td>\n      <td>NaN</td>\n      <td>Parmeliaceae</td>\n      <td>Lichen</td>\n      <td>e</td>\n      <td>Endangered</td>\n      <td>NaN</td>\n      <td>Flora</td>\n      <td>Plantae</td>\n      <td>non-vascular</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>682</th>\n      <td>Xanthoparmelia willisii</td>\n      <td>(Kurok. &amp; Filson) Elix &amp; J.Johnst.</td>\n      <td>NaN</td>\n      <td>Parmeliaceae</td>\n      <td>Lichen</td>\n      <td>e</td>\n      <td>Endangered</td>\n      <td>NaN</td>\n      <td>Flora</td>\n      <td>Plantae</td>\n      <td>non-vascular</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>683 rows × 14 columns</p>\n</div>"
+      "text/plain": "    Origin                         Species            Authority  \\\n0      end                Acacia axillaris               Benth.   \n1      end               Acacia pataczekii           D.I.Morris   \n2      NaN             Acacia siculiformis    A.Cunn. ex Benth.   \n3      NaN               Acacia ulicifolia      (Salisb.) Court   \n4      NaN                Acacia uncifolia  (J.M.Black) O'Leary   \n..     ...                             ...                  ...   \n716    end        Thylacinus cynocephalus                Harris   \n717    end             Thymichthys politus         (Richardson)   \n718    end  Tyto novaehollandiae castanops              (Gould)   \n719    NaN        Vombatus ursinus ursinus                  NaN   \n720    end                Zearaja maugeana      Last & Gledhill   \n\n            Common Name    Family          Group  sch EPBCA Flora/Fauna  \\\n0       midlands wattle  Fabaceae  Dicotyledonae    v    VU       Flora   \n1         wallys wattle  Fabaceae  Dicotyledonae    r   NaN       Flora   \n2         dagger wattle  Fabaceae  Dicotyledonae    r   NaN       Flora   \n3        juniper wattle  Fabaceae  Dicotyledonae    r   NaN       Flora   \n4         coast wirilda  Fabaceae  Dicotyledonae    r   NaN       Flora   \n..                  ...       ...            ...  ...   ...         ...   \n716           Thylacine   Mammals    Vertebrates    x    EX       Fauna   \n717        Red Handfish      Fish    Vertebrates    e    CR       Fauna   \n718          Masked Owl     Birds    Vertebrates    e    VU       Fauna   \n719  Bass Strait Wombat   Mammals    Vertebrates  NaN    VU       Fauna   \n720       Maugean Skate      Fish    Vertebrates    e    EN       Fauna   \n\n    Classification  \n0         vascular  \n1         vascular  \n2         vascular  \n3         vascular  \n4         vascular  \n..             ...  \n716     vertebrate  \n717     vertebrate  \n718     vertebrate  \n719     vertebrate  \n720     vertebrate  \n\n[721 rows x 10 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Origin</th>\n      <th>Species</th>\n      <th>Authority</th>\n      <th>Common Name</th>\n      <th>Family</th>\n      <th>Group</th>\n      <th>sch</th>\n      <th>EPBCA</th>\n      <th>Flora/Fauna</th>\n      <th>Classification</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>end</td>\n      <td>Acacia axillaris</td>\n      <td>Benth.</td>\n      <td>midlands wattle</td>\n      <td>Fabaceae</td>\n      <td>Dicotyledonae</td>\n      <td>v</td>\n      <td>VU</td>\n      <td>Flora</td>\n      <td>vascular</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>end</td>\n      <td>Acacia pataczekii</td>\n      <td>D.I.Morris</td>\n      <td>wallys wattle</td>\n      <td>Fabaceae</td>\n      <td>Dicotyledonae</td>\n      <td>r</td>\n      <td>NaN</td>\n      <td>Flora</td>\n      <td>vascular</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NaN</td>\n      <td>Acacia siculiformis</td>\n      <td>A.Cunn. ex Benth.</td>\n      <td>dagger wattle</td>\n      <td>Fabaceae</td>\n      <td>Dicotyledonae</td>\n      <td>r</td>\n      <td>NaN</td>\n      <td>Flora</td>\n      <td>vascular</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>NaN</td>\n      <td>Acacia ulicifolia</td>\n      <td>(Salisb.) Court</td>\n      <td>juniper wattle</td>\n      <td>Fabaceae</td>\n      <td>Dicotyledonae</td>\n      <td>r</td>\n      <td>NaN</td>\n      <td>Flora</td>\n      <td>vascular</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>NaN</td>\n      <td>Acacia uncifolia</td>\n      <td>(J.M.Black) O'Leary</td>\n      <td>coast wirilda</td>\n      <td>Fabaceae</td>\n      <td>Dicotyledonae</td>\n      <td>r</td>\n      <td>NaN</td>\n      <td>Flora</td>\n      <td>vascular</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>716</th>\n      <td>end</td>\n      <td>Thylacinus cynocephalus</td>\n      <td>Harris</td>\n      <td>Thylacine</td>\n      <td>Mammals</td>\n      <td>Vertebrates</td>\n      <td>x</td>\n      <td>EX</td>\n      <td>Fauna</td>\n      <td>vertebrate</td>\n    </tr>\n    <tr>\n      <th>717</th>\n      <td>end</td>\n      <td>Thymichthys politus</td>\n      <td>(Richardson)</td>\n      <td>Red Handfish</td>\n      <td>Fish</td>\n      <td>Vertebrates</td>\n      <td>e</td>\n      <td>CR</td>\n      <td>Fauna</td>\n      <td>vertebrate</td>\n    </tr>\n    <tr>\n      <th>718</th>\n      <td>end</td>\n      <td>Tyto novaehollandiae castanops</td>\n      <td>(Gould)</td>\n      <td>Masked Owl</td>\n      <td>Birds</td>\n      <td>Vertebrates</td>\n      <td>e</td>\n      <td>VU</td>\n      <td>Fauna</td>\n      <td>vertebrate</td>\n    </tr>\n    <tr>\n      <th>719</th>\n      <td>NaN</td>\n      <td>Vombatus ursinus ursinus</td>\n      <td>NaN</td>\n      <td>Bass Strait Wombat</td>\n      <td>Mammals</td>\n      <td>Vertebrates</td>\n      <td>NaN</td>\n      <td>VU</td>\n      <td>Fauna</td>\n      <td>vertebrate</td>\n    </tr>\n    <tr>\n      <th>720</th>\n      <td>end</td>\n      <td>Zearaja maugeana</td>\n      <td>Last &amp; Gledhill</td>\n      <td>Maugean Skate</td>\n      <td>Fish</td>\n      <td>Vertebrates</td>\n      <td>e</td>\n      <td>EN</td>\n      <td>Fauna</td>\n      <td>vertebrate</td>\n    </tr>\n  </tbody>\n</table>\n<p>721 rows × 10 columns</p>\n</div>"
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#import essential libraries\n",
-    "import pandas as pd\n",
-    "\n",
-    "# update the encoding on the final file\n",
-    "fileurl = \"/Users/new330/IdeaProjects/authoritative-lists/current-lists/conservation-lists/TAS-conservation.csv\"\n",
-    "tas = pd.read_csv(fileurl,encoding='cp1252')\n",
-    "tas.to_csv(fileurl, encoding=\"UTF-8\",index=False)\n",
-    "tas"
-   ]
+    "taslisturl = \"https://nre.tas.gov.au/Documents/TasThreatenedSpecies.XLS\"\n",
+    "# Process Sensitive List\n",
+    "print('Downloading SA Sensitive List')\n",
+    "tasconservation = pd.read_excel(taslisturl)\n",
+    "tasconservation"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Index(['Origin', 'Species', 'Authority', 'Common Name', 'Family', 'Group',\n       'sch', 'EPBCA', 'Flora/Fauna', 'Classification'],\n      dtype='object')"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tasconservation.columns"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "tasconservation = tasconservation.rename(columns={'Origin': 'sourceOrigin'\n",
+    "                                                            'species: 'scientificName',\n",
+    "                                                            'Authority': 'authority',\n",
+    "                                                            'Common Name': 'vernacularName',\n",
+    "                                                            'Family': 'family',\n",
+    "                                                            'sch': 'sourceStatus',\n",
+    "                                                            'EPBCA': 'epbcaStatus'\n",
+    "                                                            'Classification': 'class'\n",
+    "                                                            })\n",
+    "tasconservation.drop(['Group','Flora/Fauna'],axis=1,inplace=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
