Updates to all Notebooks to match python scripts.Updates for 2022-10 for WA, Qld, NSW and ACT. Removed data files from source code directory

--- a/source-code/py-notebook/EPBC-conservation.ipynb
+++ b/source-code/py-notebook/EPBC-conservation.ipynb
@@ -15,8 +15,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from skimpy import clean_columns\n",
-    "\n",
-    "\n",
     "# top level directory\n",
     "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
     "\n",
@@ -38,35 +36,8 @@
     }
    ],
    "source": [
-    "# projectDir = \"/Users/oco115/PycharmProjects/auth-lists-updates/\"\n",
-    "epbcreportnew = pd.read_csv(projectDir + \"source-data/EPBCA/16082022-120046-report.csv\",skiprows=1)\n",
-    "epbcreportnew.columns"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Index(['Taxon ID', 'Scientific Name', 'Common Name', 'EPBC Threat Status',\n       'EPBC Threatened Species Listed Name',\n       'EPBC Threatened Species Date Effective', 'EPBC Act Migratory', 'Bonn',\n       'Listed Name Bonn', 'CAMBA', 'Listed Name Camba', 'JAMBA',\n       'Listed Name Jamba', 'ROKAMBA', 'Listed Name Rokamba', 'Marine Status',\n       'Listed Name Marine', 'Cetacean',\n       'Finalised Priority Assessment List (FPAL)', 'Listed Name FPAL',\n       'Conservation Advice', 'Recovery Plan', 'Recovery Plan Decisions',\n       'Kingdom', 'Phylum', 'Class', 'Order', 'Family', 'Genus', 'Taxon Group',\n       'ACT NC Act', 'Listed Name', 'NSW TSC Act and FM Act', 'Listed Name.1',\n       'NT TPWC Act', 'Listed Name.2', 'Qld NC Act', 'Listed Name.3',\n       'SA NPW Act', 'Listed Name.4', 'Tas. TSP Act', 'Listed Name.5',\n       'Vic. FFG Act (Advisory Lists)', 'Listed Name.6', 'WA WC Act',\n       'Listed Name.7', 'IUCN Red List', 'IUCN Red List Listed Names',\n       'Australian Capital Territory', 'New South Wales', 'Northern Territory',\n       'Queensland', 'South Australia', 'Tasmania', 'Victoria',\n       'Western Australia', 'Ashmore and Cartier Islands',\n       'Cocos (Keeling) Islands', 'Christmas Island', 'Coral Sea Islands',\n       'Jervis Bay Territory', 'Norfolk Island', 'Heard and McDonald Islands',\n       'Australian Antarctic Territory', 'Commonwealth Marine Area',\n       'Unnamed: 65'],\n      dtype='object')"
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# list was downloaded from\n",
-    "\n",
-    "# epbcreport1 = pd.read_csv(projectDir + \"source-data/EPBCA/10052022-123645-report.csv\",skiprows=1)\n",
-    "# epbcreport1.columns"
+    "epbcreport = pd.read_csv(projectDir + \"source-data/EPBCA/10052022-123645-report.csv\",skiprows=1)\n",
+    "epbcreport.columns"
    ],
    "metadata": {
     "collapsed": false,
@@ -89,9 +60,8 @@
     }
    ],
    "source": [
-    "# to do - including all columns\n",
-    "# DWC where obvious, otherwise retain fieldnames in camelCase\n",
-    "epbcreport = epbcreportnew\n",
+    "# Rename columns\n",
+    "#\n",
     "epbcreport = epbcreport.rename(columns=\n",
     "{\n",
     "    'Taxon ID':'taxonID',\n",
@@ -138,24 +108,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "# create an epbc list: should be 1955 species (with EPBC Threat Status)\n",
+    "epbc= epbcreport[epbcreport[\"status\"].notna()]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
-      "text/plain": "10       25-NOV-2003\n29       16-JUL-2000\n39       16-JUL-2000\n41       16-JUL-2000\n43       16-JUL-2000\n            ...     \n13383    16-JUL-2000\n13389    16-JUL-2000\n13395    18-AUG-2006\n13396    16-JUL-2000\n13397    15-FEB-2018\nName: Threatened Species Date Effective, Length: 1958, dtype: object"
+      "text/plain": "       taxonID         scientificName  \\\n10       27797      Abutilon julianae   \n29        3763       Acacia ammophila   \n39        8153         Acacia anomala   \n41       13553         Acacia aphylla   \n43       64821          Acacia aprica   \n...        ...                    ...   \n13376    25899  Zosterops albogularis   \n13382    25900     Zosterops strenuus   \n13388    25906          Zyzomys maini   \n13389    25907      Zyzomys palatalis   \n13390       68   Zyzomys pedunculatus   \n\n                                          vernacularName  \\\n10                               Norfolk Island Abutilon   \n29                                                         \n39                 Grass Wattle, Chittering Grass Wattle   \n41                                  Leafless Rock Wattle   \n43                                          Blunt Wattle   \n...                                                  ...   \n13376  White-chested White-eye, Norfolk Island Silvereye   \n13382                                   Robust White-eye   \n13388    Arnhem Rock-rat, Arnhem Land Rock-rat, Kodjperr   \n13389               Carpentarian Rock-rat, Aywalirroomoo   \n13390                           Central Rock-rat, Antina   \n\n                      status Threatened Species Listed Name  \\\n10     Critically Endangered              Abutilon julianae   \n29                Vulnerable               Acacia ammophila   \n39                Vulnerable                 Acacia anomala   \n41                Vulnerable                 Acacia aphylla   \n43                Endangered                  Acacia aprica   \n...                      ...                            ...   \n13376                Extinct          Zosterops albogularis   \n13382                Extinct             Zosterops strenuus   \n13388             Vulnerable                  Zyzomys maini   \n13389             Endangered              Zyzomys palatalis   \n13390  Critically Endangered           Zyzomys pedunculatus   \n\n      Threatened Species Date Effective Act Migratory Bonn Camba Jamba  ...  \\\n10                           2003-11-25           NaN  NaN   NaN   NaN  ...   \n29                           2000-07-16           NaN  NaN   NaN   NaN  ...   \n39                           2000-07-16           NaN  NaN   NaN   NaN  ...   \n41                           2000-07-16           NaN  NaN   NaN   NaN  ...   \n43                           2000-07-16           NaN  NaN   NaN   NaN  ...   \n...                                 ...           ...  ...   ...   ...  ...   \n13376                        2000-07-16           NaN  NaN   NaN   NaN  ...   \n13382                        2000-07-16           NaN  NaN   NaN   NaN  ...   \n13388                        2006-08-18           NaN  NaN   NaN   NaN  ...   \n13389                        2000-07-16           NaN  NaN   NaN   NaN  ...   \n13390                        2018-02-15           NaN  NaN   NaN   NaN  ...   \n\n      Ashmore and Cartier Islands Cocos  Keeling  Islands Christmas Island  \\\n10                            NaN                     NaN              NaN   \n29                            NaN                     NaN              NaN   \n39                            NaN                     NaN              NaN   \n41                            NaN                     NaN              NaN   \n43                            NaN                     NaN              NaN   \n...                           ...                     ...              ...   \n13376                         NaN                     NaN              NaN   \n13382                         NaN                     NaN              NaN   \n13388                         NaN                     NaN              NaN   \n13389                         NaN                     NaN              NaN   \n13390                         NaN                     NaN              NaN   \n\n      Coral Sea Islands Jervis Bay Territory Norfolk Island  \\\n10                  NaN                  NaN        Endemic   \n29                  NaN                  NaN            NaN   \n39                  NaN                  NaN            NaN   \n41                  NaN                  NaN            NaN   \n43                  NaN                  NaN            NaN   \n...                 ...                  ...            ...   \n13376               NaN                  NaN        Extinct   \n13382               NaN                  NaN            NaN   \n13388               NaN                  NaN            NaN   \n13389               NaN                  NaN            NaN   \n13390               NaN                  NaN            NaN   \n\n      Heard and McDonald Islands Australian Antarctic Territory  \\\n10                           NaN                            NaN   \n29                           NaN                            NaN   \n39                           NaN                            NaN   \n41                           NaN                            NaN   \n43                           NaN                            NaN   \n...                          ...                            ...   \n13376                        NaN                            NaN   \n13382                        NaN                            NaN   \n13388                        NaN                            NaN   \n13389                        NaN                            NaN   \n13390                        NaN                            NaN   \n\n      Commonwealth Marine Area           sourceStatus  \n10                         NaN  Critically Endangered  \n29                         NaN             Vulnerable  \n39                         NaN             Vulnerable  \n41                         NaN             Vulnerable  \n43                         NaN             Endangered  \n...                        ...                    ...  \n13376                      NaN                Extinct  \n13382                      NaN                Extinct  \n13388                      NaN             Vulnerable  \n13389                      NaN             Endangered  \n13390                      NaN  Critically Endangered  \n\n[1955 rows x 46 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>taxonID</th>\n      <th>scientificName</th>\n      <th>vernacularName</th>\n      <th>status</th>\n      <th>Threatened Species Listed Name</th>\n      <th>Threatened Species Date Effective</th>\n      <th>Act Migratory</th>\n      <th>Bonn</th>\n      <th>Camba</th>\n      <th>Jamba</th>\n      <th>...</th>\n      <th>Ashmore and Cartier Islands</th>\n      <th>Cocos  Keeling  Islands</th>\n      <th>Christmas Island</th>\n      <th>Coral Sea Islands</th>\n      <th>Jervis Bay Territory</th>\n      <th>Norfolk Island</th>\n      <th>Heard and McDonald Islands</th>\n      <th>Australian Antarctic Territory</th>\n      <th>Commonwealth Marine Area</th>\n      <th>sourceStatus</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>10</th>\n      <td>27797</td>\n      <td>Abutilon julianae</td>\n      <td>Norfolk Island Abutilon</td>\n      <td>Critically Endangered</td>\n      <td>Abutilon julianae</td>\n      <td>2003-11-25</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Endemic</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Critically Endangered</td>\n    </tr>\n    <tr>\n      <th>29</th>\n      <td>3763</td>\n      <td>Acacia ammophila</td>\n      <td></td>\n      <td>Vulnerable</td>\n      <td>Acacia ammophila</td>\n      <td>2000-07-16</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Vulnerable</td>\n    </tr>\n    <tr>\n      <th>39</th>\n      <td>8153</td>\n      <td>Acacia anomala</td>\n      <td>Grass Wattle, Chittering Grass Wattle</td>\n      <td>Vulnerable</td>\n      <td>Acacia anomala</td>\n      <td>2000-07-16</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Vulnerable</td>\n    </tr>\n    <tr>\n      <th>41</th>\n      <td>13553</td>\n      <td>Acacia aphylla</td>\n      <td>Leafless Rock Wattle</td>\n      <td>Vulnerable</td>\n      <td>Acacia aphylla</td>\n      <td>2000-07-16</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Vulnerable</td>\n    </tr>\n    <tr>\n      <th>43</th>\n      <td>64821</td>\n      <td>Acacia aprica</td>\n      <td>Blunt Wattle</td>\n      <td>Endangered</td>\n      <td>Acacia aprica</td>\n      <td>2000-07-16</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Endangered</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>13376</th>\n      <td>25899</td>\n      <td>Zosterops albogularis</td>\n      <td>White-chested White-eye, Norfolk Island Silvereye</td>\n      <td>Extinct</td>\n      <td>Zosterops albogularis</td>\n      <td>2000-07-16</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Extinct</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Extinct</td>\n    </tr>\n    <tr>\n      <th>13382</th>\n      <td>25900</td>\n      <td>Zosterops strenuus</td>\n      <td>Robust White-eye</td>\n      <td>Extinct</td>\n      <td>Zosterops strenuus</td>\n      <td>2000-07-16</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Extinct</td>\n    </tr>\n    <tr>\n      <th>13388</th>\n      <td>25906</td>\n      <td>Zyzomys maini</td>\n      <td>Arnhem Rock-rat, Arnhem Land Rock-rat, Kodjperr</td>\n      <td>Vulnerable</td>\n      <td>Zyzomys maini</td>\n      <td>2006-08-18</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Vulnerable</td>\n    </tr>\n    <tr>\n      <th>13389</th>\n      <td>25907</td>\n      <td>Zyzomys palatalis</td>\n      <td>Carpentarian Rock-rat, Aywalirroomoo</td>\n      <td>Endangered</td>\n      <td>Zyzomys palatalis</td>\n      <td>2000-07-16</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Endangered</td>\n    </tr>\n    <tr>\n      <th>13390</th>\n      <td>68</td>\n      <td>Zyzomys pedunculatus</td>\n      <td>Central Rock-rat, Antina</td>\n      <td>Critically Endangered</td>\n      <td>Zyzomys pedunculatus</td>\n      <td>2018-02-15</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Critically Endangered</td>\n    </tr>\n  </tbody>\n</table>\n<p>1955 rows × 46 columns</p>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# create an epbc list: should be 1955 species (with EPBC Threat Status)\n",
-    "epbc= epbcreport[epbcreport[\"status\"].notna()]\n",
+    "# convert dates\n",
+    "epbc['Threatened Species Date Effective'] = pd.to_datetime(epbc['Threatened Species Date Effective'])\n",
+    "epbc['Threatened Species Date Effective'] = epbc['Threatened Species Date Effective'].dt.strftime('%Y-%m-%d')\n",
     "#drop empty columns\n",
     "epbc = epbc.dropna(axis='columns',how='all') # Drop null columns\n",
-    "\n",
-    "epbc['Threatened Species Date Effective']"
+    "epbc"
    ],
    "metadata": {
     "collapsed": false,
@@ -192,9 +178,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "outputs": [],
    "source": [
+    "# Write EPBC to file\n",
     "epbc.to_csv(projectDir + dataDir + \"EPBC-conservation-16082022.csv\",index=False)"
    ],
    "metadata": {
