--- a/source-code/py-notebook/ACT-sensitive.ipynb
+++ b/source-code/py-notebook/ACT-sensitive.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "e4998905",
    "metadata": {
     "pycharm": {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Conservation List: dr649\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -49,12 +49,22 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# top level directory\n",
-    "projectdir = \"/Users/oco115/PycharmProjects/authoritative-lists/\""
+    "projectdir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -65,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "3ca73f5d",
    "metadata": {
     "pycharm": {
@@ -98,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "results = client.get(\"9ikf-qahj\", limit=40000)"
@@ -112,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "# Convert to pandas DataFrame\n",
@@ -187,7 +197,7 @@
    ],
    "source": [
     "print('writing ACT data')\n",
-    "resultsdf.to_csv(projectdir + \"current-lists/sensitive-lists/ACT-sensitive-2022-10.csv\", encoding=\"UTF-8\", index=False)\n",
+    "results_df.to_csv(projectdir + \"current-lists/sensitive-lists/ACT-sensitive-2022-10.csv\", encoding=\"UTF-8\", index=False)\n",
     "print('Completed writing')"
    ],
    "metadata": {
